@@ -6,7 +6,10 @@
 	repeating the search online at the GNOME support forums
 	Additionally: Allow better translation of the message
 		      Allow translation of the site name
-
+	Additionally (2): Allow online search locations to be
+			  translated to point to support sites
+			  in a native language
+	
 	
 2006-07-23  Brent Smith  <gnome@nextreality.net>
 
